--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     rel="stylesheet">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>React App</title>
+  <title>Github Info</title>
 </head>
 
 <body>
